# metal_mem

./: Cargo.toml  README.md  TODO.md
examples/: ex.rs
src/: alloc_ref.rs  draft.rs  encoder.rs  global.rs  gpu_resource.rs  gpu_var.rs  gpu_vec.rs  gpu_vec2.rs  lib.rs  macros.rs  mem.rs  prelude.rs  raw_vec.rs  texture.rs  util.rs
tests/: gpu_var.rs  gpu_vec.rs  mem.rs  util.rs
