[package]
name = "metalgear"
version = "0.1.0"
authors = ["Adam Nemecek <adamnemecek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metal = { git = "https://github.com/gfx-rs/metal-rs/", rev = "c3e2973" }
#lazy_static = "*"
cocoa-foundation = "0.1"